<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tradition.Tradition"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/HistoryTitle"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">
            <ImageView
                android:scaleType="fitXY"
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/historyDesc"
                android:src="@drawable/history0"
            />
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/historyDesc"
                android:scaleType="fitXY"
                android:src="@drawable/history1"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:layout_marginEnd="7dp"
                android:contentDescription="@string/historyDesc"
                android:src="@drawable/history2"
                />
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/historyDesc"
                android:src="@drawable/history3"
                />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/history"
            />
        <TextView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/cretan_music_and_dances"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/Traditional_dance_music"
                android:src="@drawable/music0"
                />
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/Traditional_dance_music"
                android:src="@drawable/music1"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/Traditional_dance_music"
                android:src="@drawable/music2"
                />
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/Traditional_dance_music"
                android:src="@drawable/music3"
                />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/MusicAndDance"
            />


        <TextView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/typical_products"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/TypicalProducts"
                android:src="@drawable/typicalproducts0"
                />
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/TypicalProducts"
                android:src="@drawable/typicalproducts1"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_marginEnd="7dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/TypicalProducts"
                android:src="@drawable/typicalproducts2"
                />
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/TypicalProducts"
                android:src="@drawable/typicalproducts3"
                />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/TypicalProducts"
            />


        <TextView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/typical_food"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/TypicalFood"
                android:src="@drawable/typicalfood0"
                />
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/TypicalFood"
                android:src="@drawable/typicalfood1"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_marginEnd="7dp"
                android:scaleType="fitXY"
                android:src="@drawable/typicalfood2"
                android:contentDescription="@string/TypicalFood" />
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/TypicalFood"
                android:src="@drawable/typicalfood3"
                />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/TypicalFood"
            />


        <TextView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/wine"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_marginEnd="7dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/wine"
                android:src="@drawable/wine0"
                />
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/wine"
                android:src="@drawable/wine1"
                />


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/Wine"
            />





    </LinearLayout>
</ScrollView>