<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout android:id="@+id/woofDetails"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <!--    <ImageView-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="250dp"-->
        <!--        android:scaleType="fitXY"-->
        <!--        android:layout_marginTop="16dp"-->
        <!--        android:id="@+id/img"/>-->
        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="280dp"
            android:id="@+id/viewPager"/>

        <LinearLayout
            android:id="@+id/SliderDots"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/description"
            android:layout_marginEnd="5sp"
            android:layout_marginStart="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            android:autoLink="web"
            android:theme="@style/AppTheme" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/advPhone"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:onClick="openPhone"
            android:layout_marginStart="12sp"
            android:visibility="visible">

            <ImageView
                android:layout_height="36dp"
                android:layout_width="36dp"
                android:src="@drawable/ic_baseline_phone_24"

                android:contentDescription="@string/phoneicon" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phoneNumberTextView"
                android:textSize="20sp"
                android:layout_marginStart="10sp"
                android:textAlignment="center"
                android:text="+302102796120"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/directionsLinearLayout"
            android:clickable="true"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:focusable="true">
            <ImageButton
                android:id="@+id/directions"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:text="@string/show_in_maps"
                android:src="@drawable/ic_directions"
                android:background="#00FFFFFF"
                android:contentDescription="@string/map" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="5sp"
                android:layout_marginStart="5sp"
                android:text="@string/take_me_there"
                android:textAlignment="center"
                />
        </LinearLayout>



    </LinearLayout>
</ScrollView >