<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout android:id="@+id/woofDetails"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="250dp"-->
<!--        android:scaleType="fitXY"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:id="@+id/img"/>-->
        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="280dp"
            android:id="@+id/viewPager"/>

        <LinearLayout
            android:id="@+id/SliderDots"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/description"
            android:layout_marginEnd="5sp"
            android:layout_marginStart="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            android:theme="@style/AppTheme" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:id="@+id/directionsLinearLayoutBPOI"
                android:focusable="true">
                    <ImageButton
                        android:id="@+id/directions"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:text="@string/show_in_maps"
                        android:src="@drawable/ic_directions"
                        android:background="@android:color/background_light"
                        android:contentDescription="@string/map" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:text="@string/take_me_there"
                        android:textAlignment="center"
                        />
            </LinearLayout>



</LinearLayout>
</ScrollView >